# LIRS-cache

./: CMakeLists.txt  LIRS.md  Makefile  README.md  cache.cpp  lirs_tryhard.md  run_tests.py  run_tests.sh
include/: cache.hpp  ideal.hpp  lirs.hpp  main.hpp  stats.hpp  vizualizer.hpp
src/: cache.cpp  main.cpp  main_ideal.cpp  main_lirs.cpp
tests/: test1.txt  test3.txt
tests/tests_lirs/: test2.txt
tests/tests_lru/: test1.txt  test4.txt  test5.txt  test7.txt  test9.txt
tests_lru/: test10.txt  test6.txt  test8.txt
